manifests/ingress-controller/ingress/ingress-express-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: electronic-hardware-ingress
  namespace: electronic-hardware
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/app-root: "/small/docs.html/"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  rules:
  - host: ex.we-electron.com
    http:
      paths:
      - backend:
          serviceName: express
          servicePort: 8402
        path: /?(.*)
