manifests/ingress-controller/ingress/ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.k8s.sxkj.online
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
