manifests/ingress-controller/ingress/ingress-variable.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-variable
  namespace: data-finance
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: variable.k8s.sxkj.online
    http:
      paths:
      - path: /
        backend:
          serviceName: variable
          servicePort: 8080
